# assignment2

./: .gitignore  pyproject.toml  requirements.txt
MLA2/: Makefile  README.md
MLA2/docs/: Makefile  conf.py  index.rst  make.bat
adv_mla_2025/ls -la/: Makefile  README.md  pyproject.toml
adv_mla_2025/ls -la/git init/: __init__.py  dataset.py  features.py  plots.py
adv_mla_2025/ls -la/git init/modeling/: predict.py  train.py
adv_mla_2025/project_name/: Makefile  pyproject.toml
assignment2/: Makefile  README.md
assignment2/docs/: conf.py  index.rst
assignment2/notebooks/: 36120_25SP_AT2_25157912_experiment 2.ipynb
