[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-krml-149874"
version = "0.1.0"
description = "Custom Python utilities for 36120 AT1 experiments"
authors = [{name = "Mihiran Uddin Zabir"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "seaborn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
